# toad

./: .gitignore  FASTx.py  README.md  __init__.py  cert.pem  common.py  conf_local.yml  key.pem  mothur.py  pyproject.toml  run.py  test.py
DB/: common.py  mongolia.py  sqlite.py
database/: main.py
database/json_data/: Users.json
fuzzyfinder/: fuzzy.py
toad/: __init__.py  config.py  routes.py
toad/DB/: __init__.py  common.py  mongolia.py  sqlite.py
toad/api/: __init__.py
toad/api/amplicon/: __init__.py
toad/api/lib/: api_classes.py  dn_exceptions.py  utilities.py
toad/api/users/: __init__.py
toad/deploy-tests/: a.fasta
toad/lib/: FASTx.py  __init__.py  models.py
toad/tests/: a.fasta
toad/utils/: FASTx.py  common.py  fastx_test.py  mothur.py
